# KwaaiNet

./: .gitattributes  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile.eve  FEATURE_GAP_ANALYSIS.md  HACKATHONS.md  KwaaiNet.code-workspace  LICENSE  PETALS_PROTOCOL_COMPLETE.md  README.md  docker-compose.eve.yml  install.ps1  install.sh  setup.ps1  setup.sh
.github/workflows/: ci-kwaai-compute.yml  ci-kwaai-knowledge.yml  ci-kwaai-network.yml  ci-kwaai-platform.yml  ci-kwaai-storage.yml  ci-kwaai-trust.yml  ci.yml  deploy-map.yml  publish-crates.yml  release.yml  test-cuda-cache.yml
core/: Cargo.toml  README.md
core/.cargo/: config.toml
core/.claude/: SESSION_STATE.md
core/crates/kwaai-cli/: Cargo.toml
core/crates/kwaai-cli/src/: api.rs  block_rpc.rs  calibration.rs  circuit_breaker.rs  cli.rs  config.rs  daemon.rs  display.rs  grpc_server.rs  health.rs  hf.rs  identity.rs  inference_mux.rs  llama_local.rs  main.rs  map.rs  monitor.rs  node.rs  ollama.rs  ollama_proxy.rs  p2p_cmd.rs  p2p_hello.rs  progress.rs  rag_api.rs  rag_cmd.rs  rebalancer.rs  reputation.rs  reputation_cmd.rs  service.rs  setup.rs  shard_api.rs  shard_cmd.rs  storage.rs  storage_rpc.rs  throughput.rs  uninstall.rs  updater.rs  vpk.rs  vpk_bench.rs
core/crates/kwaai-compression/: Cargo.toml
core/crates/kwaai-compression/benches/: compression_bench.rs
core/crates/kwaai-compression/src/: error.rs  lib.rs  quantization.rs  sparse.rs
core/crates/kwaai-distributed/: Cargo.toml
core/crates/kwaai-distributed/src/: averaging.rs  coordinator.rs  error.rs  expert.rs  lib.rs  moe.rs
core/crates/kwaai-hivemind-dht/: Cargo.toml  README.md
core/crates/kwaai-hivemind-dht/src/: client.rs  codec.rs  error.rs  lib.rs  protocol.rs  server.rs  value.rs
core/crates/kwaai-inference/: CLAUDE.md  Cargo.toml
core/crates/kwaai-inference/benches/: inference_bench.rs
core/crates/kwaai-inference/src/: config.rs  engine.rs  error.rs  lib.rs  loader.rs  mlx_shard.rs  model.rs  shard.rs  tokenizer.rs
core/crates/kwaai-network-tests/: Cargo.toml
core/crates/kwaai-network-tests/src/: harness.rs  lib.rs  metrics.rs
core/crates/kwaai-network-tests/tests/: 01_unit_dht.rs  02_unit_p2p.rs  03_unit_rpc.rs  04_integration_daemon.rs  05_integration_relay.rs  06_network_bootstrap.rs
core/crates/kwaai-p2p/: CLAUDE.md  Cargo.toml
core/crates/kwaai-p2p-daemon/: Cargo.toml  README.md  build.rs
core/crates/kwaai-p2p-daemon/src/: client.rs  daemon.rs  dht.rs  error.rs  lib.rs  persistent.rs  protocol.rs  stream.rs
core/crates/kwaai-p2p/src/: config.rs  dht.rs  error.rs  hivemind.rs  lib.rs  network.rs  protocol.rs  rpc.rs  transport.rs
core/crates/kwaai-rag/: CLAUDE.md  Cargo.toml
core/crates/kwaai-rag/src/: axiom_extract.rs  bm25.rs  cache.rs  chunker.rs  doc_schema.rs  document.rs  dream.rs  dream_tasks.rs  embedder.rs  enrich.rs  eval_retrieve.rs  family.rs  gliner.rs  graph.rs  hyde.rs  ingestion.rs  iterative.rs  lib.rs  mentions.rs  meta_store.rs  ner.rs  obsidian.rs  prompt.rs  query_understand.rs  query_understanding.rs  relation_extract.rs  reranker.rs  retriever.rs  scorer.rs  seed_json.rs  sequence.rs  summary.rs  wiki.rs
core/crates/kwaai-rag/tests/: axiom.rs  pipeline.rs  suite.rs
core/crates/kwaai-rpc/: Cargo.toml  build.rs
core/crates/kwaai-rpc/proto/: kwaai.proto
core/crates/kwaai-rpc/src/: lib.rs
core/crates/kwaai-rpc/tests/: proto_roundtrip.rs
core/crates/kwaai-storage/: CLAUDE.md  Cargo.toml
core/crates/kwaai-storage/examples/: vector_search_bench.rs
core/crates/kwaai-storage/src/: api.rs  db.rs  lib.rs  tenant.rs  vectors.rs
core/crates/kwaai-storage/tests/: api.rs  storage.rs
core/crates/kwaai-trust/: CLAUDE.md
core/crates/kwaai-trust/src/: credential.rs  did.rs  lib.rs  verify.rs
core/crates/kwaai-wasm/: Cargo.toml
core/crates/kwaai-wasm/src/: lib.rs
core/crates/summit-server/src/: config.rs  db.rs  main.rs  routes.rs  state.rs  vc_issuer.rs
core/docs/: PETALS_BRIDGE_ROADMAP.md
core/examples/: README.md  TWO_MACHINE_TEST.md  daemon_test.rs  decode_peer.rs  dht_node.rs  dht_test.rs  expert_registry.rs  forward_pass.rs  local_averaging.rs  p2p_node.rs  peer_discovery.rs  petals_bootstrap.rs  petals_dht.rs  petals_dht_connect.rs  petals_visible.rs  progress_demo.rs  quantization.rs  query_dht.rs  query_dht_state.rs  sparse_gradients.rs  tensor_exchange.rs  tensor_ops.rs  test_announce.rs
core/src/: lib.rs
docs/: CANDLE_ENGINE.md  CHALLENGE_ARCHITECTURES.md  DATA_FLOWS.md  DEBUGGING_MAP_VISIBILITY.md  DEPLOYMENT_ARCHITECTURE.md  HIVEMIND_RUST_ARCHITECTURE.md  IP_DISCOVERY.md  LESSONS_LEARNED.md  MLX_BACKEND_PLAN.md  NODE_CONFIG_REQUIREMENTS.md  TODO.md  VERIDA_ARCHITECTURE.md  VERIDA_INTEGRATION.md  getting-started-node.md  rag-advanced-harness-plan.md  storage-fabric-plan.md
docs/vpk-shard-bench/: README.md  chart.py
plans/: windows-self-update-redesign.md
projects/kwaai-compute/: CLAUDE.md  TODO.md  access-delta-inference.md  kwaai-compute.code-workspace  requirements.md  roadmap.md
projects/kwaai-knowledge/: CLAUDE.md  TODO.md  d6_accuracy_progress.md  d6_progress_chart.py  kwaai-knowledge.code-workspace  requirements.md  roadmap.md
projects/kwaai-network/: CLAUDE.md  TODO.md  kwaai-network.code-workspace  requirements.md  roadmap.md
projects/kwaai-platform/: CLAUDE.md  TODO.md  kwaai-platform.code-workspace  requirements.md  roadmap.md
projects/kwaai-storage/: CLAUDE.md  TODO.md  kwaai-storage.code-workspace  requirements.md  roadmap.md
projects/kwaai-trust/: CLAUDE.md  TODO.md  kwaai-trust.code-workspace  requirements.md  roadmap.md
scripts/: build-p2pd.sh  clean.sh  gliner_server.py  mlx-explore.sh  patch-installer-cuda-ps1.sh  patch-installer-cuda.sh
tests/: d6_accuracy_progress.md  d6_doc_meta.yaml  d6_doc_schema.yaml  d6_eval_questions.json  d6_family_tree.yaml  notebooklm_extraction_prompt.md  shard-perf-test.sh  storage-lan-test.sh  storage-multi-eve-test.sh  uninstall-test.sh
tests/kwaai-knowledge/: axiomatic_sweep.sh  d6_accuracy_progress.md  d6_doc_schema.yaml  d6_entity_schema.yaml  (+26 more)
(+1288 files in other folders)
