[workspace]
resolver = "2"
members = [
    "crates/kwaai-p2p",
    "crates/kwaai-inference",
    "crates/kwaai-distributed",
    "crates/kwaai-compression",
    "crates/kwaai-wasm",
]

# Root package for examples
[package]
name = "kwaai-core"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
kwaai-p2p = { path = "crates/kwaai-p2p" }
kwaai-inference = { path = "crates/kwaai-inference" }
kwaai-distributed = { path = "crates/kwaai-distributed" }
kwaai-compression = { path = "crates/kwaai-compression" }
tokio = { version = "1.35", features = ["full"] }
libp2p = { version = "0.53", features = ["tokio", "kad", "identify", "noise", "tcp", "yamux", "macros"] }
futures = "0.3"
candle-core = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[example]]
name = "p2p_node"
path = "examples/p2p_node.rs"

[[example]]
name = "dht_node"
path = "examples/dht_node.rs"

[[example]]
name = "peer_discovery"
path = "examples/peer_discovery.rs"

[[example]]
name = "tensor_ops"
path = "examples/tensor_ops.rs"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Kwaai AI Lab <dev@kwaai.ai>"]
license = "MIT"
repository = "https://github.com/Kwaai-AI-Lab/KwaaiNet"
description = "Sovereign AI infrastructure - decentralized inference and training"
keywords = ["ai", "decentralized", "p2p", "wasm", "inference"]
categories = ["network-programming", "wasm", "science"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# P2P networking
libp2p = { version = "0.53", features = ["tokio", "kad", "identify", "noise", "tcp", "yamux", "macros"] }

# ML/Inference
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
half = { version = "2.4", features = ["std"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
prost = "0.12"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# WASM
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = "0.3"

# Testing
criterion = "0.5"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[profile.release-wasm]
inherits = "release"
opt-level = "s"  # Optimize for size
