[package]
name = "kwaai-compression"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Compression utilities for KwaaiNet - 8-bit quantization, gradient compression"
keywords = ["compression", "quantization", "gradients", "bandwidth", "optimization"]

[dependencies]
# ML tensors
candle-core = { workspace = true }
half = { workspace = true }

# Serialization
serde = { workspace = true }
bincode = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "compression_bench"
harness = false

[features]
default = []
